<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.friendsquiz.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/margin_bottom"
        android:layout_marginLeft="@dimen/margin_left"
        android:layout_marginRight="@dimen/margin_right"
        android:layout_marginStart="@dimen/margin_top"
        android:orientation="vertical">

        <!-- Field for user name -->
        <EditText
            android:id="@+id/user_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/userName"
            android:inputType="textCapWords"
            android:textStyle="italic" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:scaleType="centerCrop"
                android:src="@drawable/friends3"
                android:contentDescription="@string/content_description"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="#9C27B0"
                android:gravity="center"
                android:text="@string/know_friends"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/title_text_size"
                android:textStyle="bold" />
        </RelativeLayout>

        <!-- Question 1 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_top_text_view"
            android:paddingBottom="@dimen/padding_bottom_text_view"
            android:text="@string/question1"
            android:textSize="@dimen/question_text_size" />

        <RadioGroup
            android:id="@+id/radioGroup1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answer1_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer1_1" />

            <RadioButton
                android:id="@+id/answer1_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer1_2" />

            <RadioButton
                android:id="@+id/answer1_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer1_3" />

            <RadioButton
                android:id="@+id/answer1_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer1_4" />
        </RadioGroup>

        <!-- Question 2 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_top_text_view"
            android:paddingBottom="@dimen/padding_bottom_text_view"
            android:text="@string/question2"
            android:textSize="@dimen/question_text_size" />

        <RadioGroup
            android:id="@+id/radioGroup2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answer2_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer2_1" />

            <RadioButton
                android:id="@+id/answer2_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer2_2" />

            <RadioButton
                android:id="@+id/answer2_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer2_3" />

            <RadioButton
                android:id="@+id/answer2_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer2_4" />
        </RadioGroup>

        <!-- Question 3 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_top_text_view"
            android:paddingBottom="@dimen/padding_bottom_text_view"
            android:text="@string/question3"
            android:textSize="@dimen/question_text_size" />

        <RadioGroup
            android:id="@+id/radioGroup3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answer3_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer3_1" />

            <RadioButton
                android:id="@+id/answer3_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer3_2" />

            <RadioButton
                android:id="@+id/answer3_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer3_3" />

            <RadioButton
                android:id="@+id/answer3_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer3_4" />
        </RadioGroup>

        <!-- Question 4 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_top_text_view"
            android:paddingBottom="@dimen/padding_bottom_text_view"
            android:text="@string/question4"
            android:textSize="@dimen/question_text_size" />

        <RadioGroup
            android:id="@+id/radioGroup4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answer4_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer4_1" />

            <RadioButton
                android:id="@+id/answer4_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer4_2" />

            <RadioButton
                android:id="@+id/answer4_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer4_3" />

            <RadioButton
                android:id="@+id/answer4_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer4_4" />
        </RadioGroup>

        <!-- Question 5 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_top_text_view"
            android:paddingBottom="@dimen/padding_bottom_text_view"
            android:text="@string/question5"
            android:textSize="@dimen/question_text_size" />

        <RadioGroup
            android:id="@+id/radioGroup5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answer5_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer5_1" />

            <RadioButton
                android:id="@+id/answer5_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer5_2" />

            <RadioButton
                android:id="@+id/answer5_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer5_3" />

            <RadioButton
                android:id="@+id/answer5_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer5_4" />
        </RadioGroup>

        <!-- Question 6 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_top_text_view"
            android:paddingBottom="@dimen/padding_bottom_text_view"
            android:text="@string/question6"
            android:textSize="@dimen/question_text_size" />

        <RadioGroup
            android:id="@+id/radioGroup6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answer6_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer6_1" />

            <RadioButton
                android:id="@+id/answer6_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer6_2" />

            <RadioButton
                android:id="@+id/answer6_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer6_3" />
        </RadioGroup>

        <!-- Question 7 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_top_text_view"
            android:paddingBottom="@dimen/padding_bottom_text_view"
            android:text="@string/question7"
            android:textSize="@dimen/question_text_size" />

        <CheckBox
            android:id="@+id/answer7_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer7_1" />

        <CheckBox
            android:id="@+id/answer7_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer7_2" />

        <CheckBox
            android:id="@+id/answer7_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer7_3" />

        <CheckBox
            android:id="@+id/answer7_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/answer7_4" />

        <!-- Question 8 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_top_text_view"
            android:paddingBottom="@dimen/padding_bottom_text_view"
            android:text="@string/question8"
            android:textSize="@dimen/question_text_size" />

        <RadioGroup
            android:id="@+id/radioGroup8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answer8_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer8_1" />

            <RadioButton
                android:id="@+id/answer8_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer8_2" />

            <RadioButton
                android:id="@+id/answer8_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer8_3" />

            <RadioButton
                android:id="@+id/answer8_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer8_4" />
        </RadioGroup>

        <!-- Question 9 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_top_text_view"
            android:paddingBottom="@dimen/padding_bottom_text_view"
            android:text="@string/question9"
            android:textSize="@dimen/question_text_size" />

        <EditText
            android:id="@+id/answer9_1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/enterNumber"
            android:inputType="number" />

        <!-- Question 10 -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/layout_margin_top_text_view"
            android:paddingBottom="@dimen/padding_bottom_text_view"
            android:text="@string/question10"
            android:textSize="@dimen/question_text_size" />

        <RadioGroup
            android:id="@+id/radioGroup10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/answer10_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer10_1" />

            <RadioButton
                android:id="@+id/answer10_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer10_2" />

            <RadioButton
                android:id="@+id/answer10_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer10_3" />

            <RadioButton
                android:id="@+id/answer10_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answer10_4" />
        </RadioGroup>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/submitAnswers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_margin_bottom_button"
                android:layout_marginTop="@dimen/layout_margin_top_button"
                android:background="#AA00FF"
                android:onClick="submitAnswers"
                android:text="@string/submit"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/reset_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="@dimen/layout_margin_bottom_button"
                android:layout_marginTop="@dimen/layout_margin_top_button"
                android:onClick="clearAllAnswers"
                android:text="@string/reset" />

            <Button
                android:id="@+id/share_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="@dimen/layout_margin_bottom_button"
                android:layout_marginTop="@dimen/layout_margin_top_button"
                android:layout_toEndOf="@+id/submitAnswers"
                android:layout_toRightOf="@+id/submitAnswers"
                android:onClick="shareScore"
                android:visibility="invisible"
                android:text="@string/share_score" />

        </RelativeLayout>
    </LinearLayout>

</ScrollView>
